--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
   --text-color: magenta;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
+  --light-gray: lightgray;
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
@@ -251,7 +252,21 @@ main > .section:first-of-type {
 /* section metadata */
 main .section.light,
 main .section.highlight {
-  background-color: var(--light-color);
+  background-color: var(--background-color);
+  margin: 0;
+  padding: 40px 0;
+}
+
+/* section custom block */
+main .section.eds-container-block {
+  color: var(--light-color);
+  background-color: var(--link-color);
+  margin: 0;
+  padding: 40px 0;
+}
+main .section.homepage-section {
+  color: black;
+  background-color: var(--light-gray);
   margin: 0;
   padding: 40px 0;
 }
